# ias0220

./: readme.md
bags/bonus_demo/: metadata.yaml
bags/loops/: metadata.yaml
bags/ros_bag_to_light/: metadata.yaml  ros_bag_to_light_try_2_0.db3
install/: local_setup.sh  setup.sh
install/encoders_pkg/share/encoders_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/encoders_pkg/share/encoders_pkg/config/: encoders_params.yaml
install/setup_gazebo_ias0220/share/setup_gazebo_ias0220/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/setup_gazebo_ias0220/share/setup_gazebo_ias0220/worlds/: seethelight.world
log/: latest_build
src/encoders_interfaces/: CMakeLists.txt
src/encoders_interfaces/msg/: Counter.msg
src/encoders_pkg/: setup.cfg  setup.py
src/ias0220_250620/: setup.cfg  setup.py
src/ias0220_250620/config/: default.rviz  task6_part1_250620.rviz  task_5-1_config.rviz  test_config.rviz
src/ias0220_250620/data/: video_task_4_2.mkv
src/ias0220_250620/ias0220_250620/: camera_calibration.py  image_publisher.py  odometry.py  steering_node.py
src/ias0220_250620/install/: local_setup.sh  setup.sh  setup.zsh
src/ias0220_250620/launch/: bagfile_record_task6_part1.launch.py  differential_robot_rosbag_steering_task5_part2_offline_data.launch.py  differential_robot_simu_task4_part1.launch.py  (+7 more)
src/ias0220_sensors/: setup.cfg  setup.py
src/install/: local_setup.sh  setup.sh
src/log/: latest_build
src/machine_vision_part2/: package.xml  setup.cfg  setup.py
src/recorded/: metadata.yaml  recorded_0.db3
src/setup_gazebo_ias0220/: setup.cfg  setup.py
src/transform_frame/: CMakeLists.txt
(+107 files in other folders)
