<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>encoders_pkg</name>
  <version>0.0.0</version>
  <description>A package to simulate encoders</description>
  <maintainer email="simon.godon@taltech.ee">simon</maintainer>
  <license>Apache-2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <exec_depend>python-transforms3d-pip</exec_depend>
  <exec_depend>encoders_interfaces</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
